Bug 288999 - When panel is hidden, calendar pops up in wrong place
Summary: When panel is hidden, calendar pops up in wrong place
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: panel (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-14 20:59 UTC by Haakon Nilsen
Modified: 2011-12-16 11:52 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Haakon Nilsen 2011-12-14 20:59:41 UTC
Version:           unspecified (using KDE 4.7.3) 
OS:                Linux

When you click the clock panel, a calendar appears right above the clock. I like to assign a keyboard shortcut for this: ctrl-alt-k makes the calendar pop up as if I had clicked the clock.

However, when the panel is set to auto-hide, and it is hidden, and I press the keyboard shortcut, the calendar pops up to the far left instead of to the far right above where the clock would have been if it were possible. This means that the calendar shows up in different places depending on whether the panel is hidden or not, which is not good for usability IMHO.

Reproducible: Always

Steps to Reproduce:
* Start with a panel with a Digital Clock on it, placed on the far right of the panel.
* Assign a keyboard shortcut to it.
* Set the panel to auto-hide.
* Wait until the panel is hidden.
* Press the keyboard shortcut.

Actual Results:  
The calendar appears, but to the left, not the right.

Expected Results:  
It should have appeared where it appears when clicked on with the mouse - right above the clock.
Comment 1 Aaron J. Seigo 2011-12-16 11:52:38 UTC
Git commit 1510ff3108a8d6a7e4406a75b3571aa68d5f0c69 by Aaron Seigo.
Committed on 16/12/2011 at 12:50.
Pushed by aseigo into branch 'KDE/4.7'.

delay showing popups until the next processing of events

allows things like hidden panels to show before calculating where to show the popup

BUG:288999

M  +28   -14   plasma/popupapplet.cpp
M  +1    -0    plasma/private/packages.cpp
M  +2    -0    plasma/private/popupapplet_p.h

http://commits.kde.org/kdelibs/1510ff3108a8d6a7e4406a75b3571aa68d5f0c69