delay showing popups until the next processing of events

allows things like hidden panels to show before calculating where to show the popup

BUG:288999